# git-branch-delete-merged-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: branches.rs  command.rs  lib.rs  main.rs
